added orientation to the search page

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,4 +57,7 @@ flutter:
     - family: Ubuntu
       fonts:
         - asset: fonts/Ubuntu-Regular.ttf
+    - family: Dancing_Script
+      fonts:
+        - asset: fonts/DancingScript-VariableFont_wght.ttf
 
