--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   flutter_auth_buttons: ^0.8.0
   flutter_facebook_login: ^3.0.0
   image_picker: ^0.6.7+4
+  modal_progress_hud: ^0.1.3
 
 dev_dependencies:
   flutter_test:
