--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   flutter_facebook_login: ^3.0.0
   image_picker: ^0.6.7+4
   modal_progress_hud: ^0.1.3
+  pull_to_refresh: ^1.6.1
+
 
 dev_dependencies:
   flutter_test:
